[gd_scene load_steps=16 format=2]

[ext_resource path="res://addons/scaffolder/src/gui/widgets/accordion_header.gd" type="Script" id=1]
[ext_resource path="res://addons/scaffolder/src/gui/widgets/scaffolder_texture_rect.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/scaffolder/src/gui/widgets/scaffolder_label.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/scaffolder/src/gui/widgets/spacer.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/scaffolder/assets/fonts/pxlzr_font_m.tres" type="DynamicFont" id=5]
[ext_resource path="res://addons/scaffolder/assets/images/gui/nine_patch/focus_border.png" type="Texture" id=6]
[ext_resource path="res://addons/scaffolder/src/gui/style_box_texture_scalable.gd" type="Script" id=7]

[sub_resource type="StyleBoxTexture" id=1]
content_margin_left = 16.0
content_margin_right = 16.0
content_margin_top = 8.0
content_margin_bottom = 8.0
region_rect = Rect2( 0, 0, 9, 9 )
margin_left = 3.5
margin_right = 3.5
margin_top = 3.5
margin_bottom = 3.5
script = ExtResource( 7 )

[sub_resource type="StyleBoxTexture" id=2]
content_margin_left = 16.0
content_margin_right = 16.0
content_margin_top = 8.0
content_margin_bottom = 8.0
region_rect = Rect2( 0, 0, 9, 9 )
margin_left = 3.5
margin_right = 3.5
margin_top = 3.5
margin_bottom = 3.5
script = ExtResource( 7 )

[sub_resource type="StyleBoxTexture" id=3]
content_margin_left = 0.0
content_margin_right = 0.0
content_margin_top = 0.0
content_margin_bottom = 0.0
region_rect = Rect2( 0, 0, 9, 9 )
margin_left = 3.5
margin_right = 3.5
margin_top = 3.5
margin_bottom = 3.5
expand_margin_left = 3.0
expand_margin_right = 3.0
expand_margin_top = 3.0
expand_margin_bottom = 3.0
script = ExtResource( 7 )

[sub_resource type="StyleBoxTexture" id=4]
content_margin_left = 16.0
content_margin_right = 16.0
content_margin_top = 8.0
content_margin_bottom = 8.0
region_rect = Rect2( 0, 0, 9, 9 )
margin_left = 3.5
margin_right = 3.5
margin_top = 3.5
margin_bottom = 3.5
script = ExtResource( 7 )

[sub_resource type="StyleBoxTexture" id=5]
content_margin_left = 16.0
content_margin_right = 16.0
content_margin_top = 8.0
content_margin_bottom = 8.0
region_rect = Rect2( 0, 0, 9, 9 )
margin_left = 3.5
margin_right = 3.5
margin_top = 3.5
margin_bottom = 3.5
script = ExtResource( 7 )

[node name="AccordionHeader" type="Button"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -564.0
margin_bottom = -712.0
rect_min_size = Vector2( 460, 56 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = ExtResource( 5 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 460.0
margin_bottom = 56.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false,
"sc_separation": 16
}

[node name="Spacer" parent="HBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 28.0
margin_bottom = 28.0

[node name="ScaffolderLabel" parent="HBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 16.0
margin_top = 8.0
margin_right = 413.0
margin_bottom = 47.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 5 )
align = 0

[node name="ScaffolderTextureRect" parent="HBoxContainer" instance=ExtResource( 2 )]
margin_left = 429.0
margin_top = 16.0
margin_right = 444.0
margin_bottom = 40.0
rect_min_size = Vector2( 15, 24 )
mouse_filter = 2
texture_key = "left_caret_normal"
texture_scale = Vector2( 3, 3 )

[node name="Spacer2" parent="HBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 460.0
margin_top = 28.0
margin_right = 460.0
margin_bottom = 28.0

[connection signal="pressed" from="." to="." method="_on_AccordionHeader_pressed"]
